Replace switch statements with switch expressions and Collections methods with List.of() in JsonObjectMatcher